# egodary

./: .gitignore  CHANGELOG.md  Checklist.txt  README.md  TRANSFER.md  forge_dropdowns.patch  forge_quick_settings.patch  patches.txt  prepare_transfer.bat  pyproject.toml  restart.bat  update_and_run.bat
Patches/: add_tag_modal_subgroup_fix.patch  auto_open_browser.patch  batch_pose_expression_axes.patch  batch_script_ctrlc_and_paren_fix.patch  clothing_condition_color_and_unzip.patch  edit_tag_modal_move.patch  egodary_content_length_fix.patch  egodary_wildcards_and_plugins.patch  features_frontend.patch  features_history_sessions_batch_forge_backend.patch  forge_hires_button.patch  forge_hires_save.patch  forge_quick_settings.patch  img2text-plan-v3.1.md  move_tag_subgroup_fix.patch  scene_environment_location_dedup_fix.patch  speedup_update_and_run.patch  wildcard_id_collision_fix.patch  wildcard_leaf_label_fix.patch  wildcard_tree_leaves_and_selectable_chips.patch  wildcards-plugin-refactor.md
docs/: PROGRESS.md  TAG_STUDIO_ROLLBACK.md
egodary/: __init__.py  _version.py  app.py  bootstrap.py  config.py  logging_setup.py
plugins_user/: .gitkeep  README.md
rules_user/: active_profiles.yaml
scripts/: build_appearance_catalog.py  build_camera_catalog.py  build_character_catalog.py  build_clothing_conditions_catalog.py  build_clothing_state_catalog.py  build_environment_catalog.py  build_face_catalog.py  build_fetish_catalog.py  build_lighting_catalog.py  build_outfit_catalog.py  build_pose_catalog.py  build_style_catalog.py  build_tag_tooltips_ru.py  label_ru.py  (+15 more)
(+220 files in other folders)
